--- a/eureka-server/.gitignore
+++ b/eureka-server/.gitignore
@@ -11,7 +11,6 @@ target/
 *.iws
 *.iml
 *.ipr
-.idea/workspace.xml
 
 ### Eclipse ###
 .apt_generated
@@ -37,4 +36,6 @@ build/
 
 ### Mac OS ###
 .DS_Store
-/.idea/
+
+### resources ###
+!**/src/main/
