--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>eureka-server</module>
+    <module>third-part-index-data-server</module>
   </modules>
   <packaging>pom</packaging>
 
