--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <modules>
     <module>eureka-server</module>
     <module>third-part-index-data-server</module>
+    <module>index-gather-store-service</module>
   </modules>
   <packaging>pom</packaging>
 
