--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <module>eureka-server</module>
     <module>third-part-index-data-server</module>
     <module>index-gather-store-service</module>
+      <module>index-codes-service</module>
   </modules>
   <packaging>pom</packaging>
 
